--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Overlay"
+name="Linux"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Applications/Overlay/Overlay.x86_64"
+export_path="../../Desktop/Overlay/Overlay.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -22,7 +22,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=0
+debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
